app/assets/stylesheets/custom.scss
/* ... */
/* Sign up */
.signup_form {
  padding: 0 20px;
  input {
    margin-bottom: 24px;
  }
}

/* Users index */

.user_search_form {
  text-align: center;
  input[type="search"] {
    width: 200px;
  }
}

.users {
  list-style: none;
  margin: 0;
  li {
    overflow: auto;
    padding: 10px 0;
    border-bottom: 1px solid $gray-lighter;
    &:last-child {
      border-bottom: none;
    }
  }
}

.btn-follow {
  display: inline-block;
  width: 100px;
}

.inline-block {
  display: inline-block;
}

.unsubscribe-btn {
  border: none;
  color: #7f8c8d;
  &:hover {
    color: #95a5a6;
  }
}
.subscribe-btn {
  border: none;
  color: orange;
  &:hover {
    color: rgb(255, 201, 100);
  }
}
.subscribe-btn-invalid {
  color: gray;
}
.users_container {
  display: flex;
  justify-content: center;
  align-items: center;
  ul {
    padding: 0;
  }
}

/* microposts */

.microposts,
.materials {
  list-style: none;
  padding: 0;
  li {
    padding: 16px 0px 12px 16px;
    border-top: 1px solid #e8e8e8;
    &:first-child {
      border-top: none;
    }
  }
  .notification:first-child {
    border-top: none;
  }

  .user {
    display: flex;
    gap: 8px;
    align-items: center;
    .profile-icon-frame {
      flex-basis: 40px;
      flex-shrink: 0;
      width: 40px;
      height: 40px;
      img {
        width: 40px;
        height: 40px;
        border-radius: 50%;
        object-fit: cover;
        object-position: 50% 50%;
      }
    }
  }

  .content-info,
  .comment-wrap {
    display: flex;
    gap: 8px;
    .profile-icon-frame {
      flex-basis: 40px;
      flex-shrink: 0;
      width: 40px;
      height: 40px;
      img {
        width: 40px;
        height: 40px;
        border-radius: 50%;
        object-fit: cover;
        object-position: 50% 50%;
      }
    }
  }

  .material-card .content-info {
    margin-left: 8px;
  }
  
  .content-text-info {
    width: 100%;
  }

  .username {
    margin-bottom: 2px;
  }

  .content-stats {
    display: flex;
    align-items: center;
    gap: 10px;
    margin-right: -12px;
    .timestamp {
      font-size: 0.9rem;
      color: $gray-light;
      margin-left: 0px;
    }
  }

  .text-content {
    word-break: break-word;
    margin: 16px;
    font-size: 1.1rem;
  }


  .content-container {
    position: relative;
    .image-content {
      margin-bottom: 8px;
    }
    img {
      width: 100%;
      object-fit: contain;
      object-position: 50% 50%;
    }
    p {
      margin: 5px 0;
      word-break: break-word;
    }
  }
  .gravatar {
    float: left;
    margin: 0px;
  }
  .links {
    margin: 0px;
    .links-container {
      background-color: #eeeeee80;
      padding: 20px 20px 4px;
      border-radius: 16px;
      .links-wrap {
        display: flex;
        justify-content: center;
        background-size: contain;
        background-repeat: no-repeat;
        width: 100%;
        aspect-ratio: 4 / 3;
        margin-bottom: 4px;
        figure {
          display: flex;
          flex-direction: column;
          align-items: center;
          width: 100%;
          height: 100%;
          img {
            aspect-ratio: 16 / 9;
            width: 100%;
            object-fit: contain;
            object-position: 50% 50%;
            padding-bottom: 8px;
          }
        }
        iframe {
          width: 100%;
          height: 100%;
        }
        .pdf-container {
          width: 100%;
          height: 100%;
          iframe {
            width: 100%;
            height: 100%;
          }
        }
        .file-container {
          width: 100%;
          height: 100%;
          iframe {
            width: 100%;
            height: 100%;
          }
        }
      }
    }
    figcaption {
      margin-top: 8px;
      font-size: 0.9rem;
      color: gray;
      caption-side: bottom;
    }
  }
  .ogp {
    figure {
      img {
        padding: 0;
      }
      .ogp_title {
        font-weight: bold;
      }
    }
    figcaption {
      display: -webkit-box;
      -webkit-box-orient: vertical;
      overflow: hidden;
      // font-size: 1.1rem;
      line-height: 1.2rem;
    }
  }
  .img-container {
    background-color: #eeeeee80;
    padding: 20px 20px 8px;
    border-radius: 16px;
    .img-wrap {
      display: flex;
      justify-content: center;
      background-size: contain;
      background-repeat: no-repeat;
      aspect-ratio: 4 / 3;
      width: 100%;
      margin-bottom: 0.5rem;
      img {
        width: 100%;
        object-fit: contain;
        object-position: 50% 50%;
      }
    }
  }
  .btn-tagsedit {
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    overflow: hidden;
    background-color: rgb(239, 239, 239);
    font-size: inherit;
    padding: 0;
    width: 26.95px;
    height: 26.95px;
    &:hover {
      opacity: 0.6;
    }
  }
  .response-form {
    display: flex;
    align-items: center;
    column-gap: 16px;
    font-size: 1.2rem;
    .icon-group {
      display: flex;
      align-items: center;
    }
    .btn-link {
      margin: 0;
      padding: 0;
      display: inline;
      text-decoration-line: none;
    }
    a {
      display: inline;
    }
  }
  .wrap {
    border-radius: 16px;
    margin-left: auto;
    width: calc(100% - 20px);
    background-color: #eeeeee80;
    p {
      font-size: 1.1rem;
      line-height: 1.3rem;
      margin: 5px;
      word-break: break-word;
    }
  }
  form {
    padding-bottom: 0px;
  }
  textarea {
    margin-bottom: 5px;
  }
  .pagination {
    display: none;
  }
  .response_text_wrap {
    .input-group {
      width: 100%;
      textarea {
        border: none;
        margin: 0;
      }
      .input-group-btn {
        width: 20px;
        background-color: #1abc9c;
        border-radius: 0 4px 4px 0px;
      }
    }
  }
}

.tags-wrap {
  display: flex;
  align-items: center;
  column-gap: 8px;
  row-gap: 4px;
  flex-wrap: wrap;
  margin: 8px 0 12px;
  a {
    padding-right: 8px;
  }
}
/* ... */

